@@ -1,6 +1,6 @@
 ### Create parameter sets for Generalized Hyperbolic
 ###
-### ghypLargeParam
+###
 ###require(GeneralizedHyperbolic)
 mus <- c(-1,0,1,2)
 deltas <- c(1,2,5,10)
@@ -21,7 +21,8 @@ for (i in 1:length(mus)){
         chi <- xiChis[k,2]
         alpha <- (1 - xi^2)/(deltas[j]*xi*sqrt(xi^2 - chi^2))
         beta <- alpha*chi/xi
-        param <- c(mus[i],deltas[j],round(alpha,1),round(beta,1),lambdas[l])
+        param <- c(mus[i],deltas[j],round(alpha,3),round(beta,3),lambdas[l])
+        if (param[3] <= abs(param[4])) print("Error")
         ghypLargeParam[rownum,] <- param
         rownum <- rownum + 1
       }
@@ -48,7 +49,8 @@ for (i in 1:length(mus)){
         chi <- xiChis[k,2]
         alpha <- (1 - xi^2)/(deltas[j]*xi*sqrt(xi^2 - chi^2))
         beta <- alpha*chi/xi
-        param <- c(mus[i],deltas[j],round(alpha,1),round(beta,1),lambdas[l])
+        param <- c(mus[i],deltas[j],round(alpha,3),round(beta,3),lambdas[l])
+        if (param[3] <= abs(param[4])) print("Error")
         ghypSmallParam[rownum,] <- param
         rownum <- rownum + 1
       }
@@ -76,7 +78,8 @@ for (i in 1:length(mus)){
         chi <- xiChis[k,2]
         alpha <- (1 - xi^2)/(deltas[j]*xi*sqrt(xi^2 - chi^2))
         beta <- alpha*chi/xi
-        param <- c(mus[i],deltas[j],round(alpha,1),round(beta,1),lambdas[l])
+        param <- c(mus[i],deltas[j],round(alpha,3),round(beta,3),lambdas[l])
+        if (param[3] <= abs(param[4])) print("Error")
         ghypLargeShape[rownum,] <- param
         rownum <- rownum + 1
       }
@@ -103,7 +106,8 @@ for (i in 1:length(mus)){
         chi <- xiChis[k,2]
         alpha <- (1 - xi^2)/(deltas[j]*xi*sqrt(xi^2 - chi^2))
         beta <- alpha*chi/xi
-        param <- c(mus[i],deltas[j],round(alpha,1),round(beta,1),lambdas[l])
+        param <- c(mus[i],deltas[j],round(alpha,3),round(beta,3),lambdas[l])
+        if (param[3] <= abs(param[4])) print("Error")
         ghypSmallShape[rownum,] <- param
         rownum <- rownum + 1
       }
